Put button on own line

--- a/src/styles/forms/_patient-referral.scss
+++ b/src/styles/forms/_patient-referral.scss
@@ -28,6 +28,10 @@
     }
   }
 
+  //submit button on own line
+  div[data-type="Button"].ft--theme--Button--primary {
+    grid-column: span 2;
+  }
   
 
 }
