Update paragraph padding

--- a/src/styles/forms/_patient-referral.scss
+++ b/src/styles/forms/_patient-referral.scss
@@ -26,7 +26,7 @@
   }
 
   div[data-type="Paragraph"] {
-    padding-top: 10px;
+    padding-top: 10px !important;
   }
 
   //submit button on own line
