--- a/src/styles/forms/_patient-referral.scss
+++ b/src/styles/forms/_patient-referral.scss
@@ -17,7 +17,7 @@
   }
 
   //paragraph grid
-  div[data-type="Paragraph"], div[data-type="Subhead"] {
+  div[data-type="Subhead"] {
     grid-column: span 2;
     margin: 0;
     font-weight: 600;
@@ -26,6 +26,11 @@
   }
 
   div[data-type="Paragraph"] {
+    grid-column: span 2;
+    margin: 0;
+    font-weight: 600;
+    color: #102a43 !important;
+    font-size: 1rem !important;
     padding-top: 10px !important;
   }
 
