Update button style

--- a/src/styles/forms/_patient-referral.scss
+++ b/src/styles/forms/_patient-referral.scss
@@ -39,6 +39,13 @@
     grid-column: span 2;
   }
   
+  .ft--e45--root.ft--theme--FormField--buttongroup.ft--theme--FormField--contained button.ftselected {  background-color: #2681c2 !important;
+  color: #fff !important;
+}
+.ft--e45--root.ft--theme--FormField--buttongroup.ft--theme--FormField--contained button {
+  background-color: #b7c5d2 !important;
+  color: #102a43 !important;
+}
 
 }
   
