--- a/src/styles/forms/_patient-referral.scss
+++ b/src/styles/forms/_patient-referral.scss
@@ -45,12 +45,16 @@
     border-radius: 6px;
     padding: 10px 28px;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 16px;
   }
 
   .ft--e45--root.ft--theme--FormField--buttongroup.ft--theme--FormField--contained button.ftselected {  
     background-color: #2681c2 !important;
     color: #fff !important;
+  }
+
+  div[role="radiogroup"] {
+    gap: 10px;
   }
 
 }
