--- a/src/styles/forms/_patient-referral.scss
+++ b/src/styles/forms/_patient-referral.scss
@@ -20,7 +20,7 @@
   div[data-type="Subhead"] {
     grid-column: span 2;
     margin: 0;
-    font-weight: 600;
+    font-weight: 600 !important;
     color: #102a43 !important;
     font-size: 1rem !important;
   }
@@ -28,7 +28,7 @@
   div[data-type="Paragraph"] {
     grid-column: span 2;
     margin: 0;
-    font-weight: 600;
+    font-weight: 600 !important;
     color: #102a43 !important;
     font-size: 1rem !important;
     padding-top: 10px !important;
