--- a/src/styles/forms/_patient-referral.scss
+++ b/src/styles/forms/_patient-referral.scss
@@ -57,5 +57,9 @@
     gap: 10px;
   }
 
+  .ft--e45--root.ft--theme--FormField--buttongroup .ft--label {
+    font-size: 16px !important;
+  }
+
 }
   
