Update header margin on calender

--- a/src/styles/forms/_patient-registration.scss
+++ b/src/styles/forms/_patient-registration.scss
@@ -123,6 +123,11 @@
     }
   }
 
+  //contact information calendar
+  .MuiPickersToolbar-toolbar-401 button h4 {
+    margin: 0 !important;
+  }
+
   // additional patient information
   #e190 {
     grid-template-columns: 1fr 1fr;
